# llvm-mlir-toy

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  codegen2.mlir
include/toy/: Dialect.cpp.inc
src/mlir/: Dialect.cpp
